--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,15 +16,15 @@
     </ul>
     <ul class='lists-right'>
     <% if user_signed_in? %>
-    <div class="nav__right">
-      <li><%= link_to current_user.nickname, "#", class: "user-nickname"  %></li>
-      <li><%= link_to 'ログアウト', destroy_user_session_path, data: {turbo_method: :delete}, class: :nav__logout  %></li>
-    </div>
+      <div class="nav__right">
+        <li><%= link_to current_user.nickname, "/users/#{current_user.id}", class: "user-nickname"  %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path, data: {turbo_method: :delete}, class: :nav__logout  %></li>
+      </div>
     <% else %>
-    <div class="nav__right">
-      <li><%= link_to 'ログイン', new_user_session_path, class: :nav__btn %></li>
-      <li><%= link_to '新規登録', new_user_registration_path, class: :nav__btn %></li>
-    </div>
+      <div class="nav__right">
+        <li><%= link_to 'ログイン', new_user_session_path, class: :nav__btn %></li>
+        <li><%= link_to '新規登録', new_user_registration_path, class: :nav__btn %></li>
+      </div>
     <% end %>
     </ul>
   </div>
