--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,7 +128,8 @@
     </div>
     <ul class='item-lists'>
 
-    <% @items.each do |item| %>
+      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+    <%# @items.each do |item| %>
       <li class='list'>
         <%= link_to item_path(item) do %>
         <div class='item-img-content'>
@@ -155,7 +156,7 @@
         </div>
         <% end %>
       </li>
-    <% end %>
+    <%# end %>
     
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
       <%# 商品がある場合は表示されないようにしましょう %>
